# projet-commun-unirail

./: Makefile  README.md  debug.txt  debug3.txt  run_all.sh
.github/workflows/: build.yml  build_EVC.yml  build_RBC.yml
CPNTools/: CPNTools Unirail.cpn  all_trains.cpn
TestCanLinux/: CMakeLists.txt  init.h  main.c  readme.txt
TestCanLinux/CAN/: MESCAN1_DefinitionVariable.h  MESCAN1_Utilitaire.c  MESCAN1_Utilitaire.h  canLinux.c  canLinux.h
app/EVC/: Makefile
app/EVC/include/: Bibli_automatique.h  automatique.h  comm.h  eoa_handler.h  map.h  position.h  requests_handler.h  response_listener.h
app/EVC/src/: Bibli_automatique.c  Bibli_automatique.h  Test_automatique.c  automatique.c  comm.c  eoa_handler.c  main.c  position.c  requests_handler.c  response_listener.c
app/MissionSupervisor/: Makefile
app/MissionSupervisor/src/: main.c
app/RBC/: Makefile
app/RBC/include/: comm.h  eoa_calculator.h  gestionnaire_requetes.h  gestionnaire_ressources.h  position.h  requests_handler.h  ressources.h  trains.h
app/RBC/src/: comm.c  eoa_calculator.c  gestionnaire_requetes.c  gestionnaire_ressources.c  main.c  next_oae_calculator.c  requests_handler.c  ressources.c  trains.c
app/RBC/test/: test_aig.c
app/utility/: Makefile
app/utility/include/: can.h  can_infra.h  comm.h  comm_message_listener.h  const_chemins.h  debug.h  map.h
app/utility/src/: can.c  can_infra.c  comm.c  comm_message_listener.c  const_chemins.c  map.c
papyrus/projet-commun-unirail/: .project  projet-commun-unirail.notation  projet-commun-unirail.uml
(+18 files in other folders)
